src/objects/Plan__c.object
<CustomObject>
    <description>Grouping object for Price Plans.</description>
    <fields>
        <fullName>Days_Before__c</fullName>
        <label>Days Before</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populate with the product that should be used for product validation (Product To) on related Print Price Plan records.</inlineHelpText>
        <label>Destination Product</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Unique_Name_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>Name = VLOOKUP($ObjectType.Plan__c.Fields.Name,  $ObjectType.Plan__c.Fields.Name, Name) &amp;&amp;  (ISNEW() || ISCHANGED(Name))</errorConditionFormula>
        <errorMessage>The name you are trying to use is a duplicate</errorMessage>
    </validationRules>
</CustomObject>